GH-7817 fixing stretched media in safari browser

--- a/projects/storefrontstyles/scss/components/content/media/_media.scss
+++ b/projects/storefrontstyles/scss/components/content/media/_media.scss
@@ -1,7 +1,6 @@
 %cx-media {
   position: relative;
-  display: flex;
-  align-items: stretch;
+  display: block;
   img {
     max-width: 100%;
     max-height: 100%;
